test/parser/variadic-non-extern-function.delta.output
variadic-non-extern-function.delta:5:15: error: unexpected '...'
void f(int i, ...) {}
              ^
variadic-non-extern-function.delta:5:15: error: unexpected '...'
void f(int i, ...) {}
              ^
