test/parser/variadic-non-extern-function.delta
// RUN: %check_errors %not %delta -parse %s

// TODO: Improve error message to say "expected type, got '...'"
// CHECK: [[@LINE+1]]:15: error: unexpected '...'
void f(int i, ...) {}
